--- a/hello_world_msg.j2
+++ b/hello_world_msg.j2
@@ -7,7 +7,7 @@
 <tr>
 <td>
 <h1>HELLO WORLD APPLICATION </h1>
-<p>DATA: {{ ansible_date_time.date }}. HOST : {{ansible_hostname}}
+<p>DATA: {{ ansible_date_time.date }} : {{ ansible_date_time.time }} HOST : {{ansible_hostname}}
 </td>
 </tr>
 </table>
